objects/Coin__c/Coin__c.object-meta.xml
<CustomObject>
    <label>Moeda</label>
    <nameField>
        <label>Sigla</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Moedas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>