objects/Coin__c/fields/ath__c.field-meta.xml
<CustomField>
    <fullName>ath__c</fullName>
    <description>All Time High</description>
    <inlineHelpText>All Time High</inlineHelpText>
    <label>Maior Preço</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>