objects/Coin__c/fields/ath_date__c.field-meta.xml
<CustomField>
    <fullName>ath_date__c</fullName>
    <description>All Time High Date</description>
    <label>Data Maior Preço</label>
    <type>Date</type>
</CustomField>