objects/Coin__c/fields/ATH_Valor_Total__c.field-meta.xml
<CustomField>
    <fullName>ATH_Valor_Total__c</fullName>
    <formula>ath__c *  Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total no Maior Preço</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>