objects/Coin__c/fields/atl__c.field-meta.xml
<CustomField>
    <fullName>atl__c</fullName>
    <inlineHelpText>All Time Low</inlineHelpText>
    <label>Menor Preço</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>