objects/Coin__c/fields/atl_date__c.field-meta.xml
<CustomField>
    <fullName>atl_date__c</fullName>
    <description>All Time Low Date</description>
    <label>Data Menor Preço</label>
    <type>Date</type>
</CustomField>