objects/Coin__c/fields/ATL_Valor_Total__c.field-meta.xml
<CustomField>
    <fullName>ATL_Valor_Total__c</fullName>
    <formula>atl__c *  Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total no Menor Preço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>