objects/Coin__c/fields/Avaliacao__c.field-meta.xml
<CustomField>
    <fullName>Avaliacao__c</fullName>
    <description>Avaliação pessoal do projeto da moeda</description>
    <label>Avaliação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐⭐⭐⭐</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>