objects/Coin__c/fields/Custom_Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Custom_Icon_URL__c</fullName>
    <label>URL Icone</label>
    <type>Url</type>
</CustomField>