objects/Coin__c/fields/icon__c.field-meta.xml
<CustomField>
    <fullName>icon__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Coin__c/&quot; &amp; Id &amp; &quot;/view&quot;, IMAGE(Custom_Icon_URL__c , &quot;&quot;, 32, 32))

/* Sem hyperlink:
IF( Custom_Icon_URL__c != null , IMAGE(Custom_Icon_URL__c , &quot;&quot;, 32, 32), IMAGE(&quot;https://raw.githubusercontent.com/atomiclabs/cryptocurrency-icons/master/32/color/&quot; &amp;  LOWER(Name) &amp; &quot;.png&quot;, &quot;&quot;, 32, 32) )
*/</formula>
    <label>Icone</label>
    <type>Text</type>
</CustomField>