objects/Coin__c/fields/Icone_Sigla__c.field-meta.xml
<CustomField>
    <fullName>Icone_Sigla__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Coin__c/&quot; &amp; Id &amp; &quot;/view&quot;, IMAGE(Custom_Icon_URL__c , &quot;&quot;, 32, 32) &amp; &quot; &quot; &amp;  Name)

/* Sem hyperlink:
icon__c &amp; &quot; &quot; &amp;  Name
*/</formula>
    <label>Icone | Sigla</label>
    <type>Text</type>
</CustomField>