objects/Coin__c/fields/Icone_Sigla_Nome__c.field-meta.xml
<CustomField>
    <fullName>Icone_Sigla_Nome__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Coin__c/&quot; &amp; Id &amp; &quot;/view&quot;, IMAGE(Custom_Icon_URL__c , &quot;&quot;, 32, 32) &amp; &quot; &quot; &amp;  Name &amp; &quot; - &quot; &amp;  Nome_da_Moeda__c)

/* Sem hyperlink:
icon__c  &amp; &quot; &quot; &amp;  Name &amp; &quot; - &quot; &amp;  Nome_da_Moeda__c
*/</formula>
    <label>Icone | Sigla | Nome</label>
    <type>Text</type>
</CustomField>