objects/Coin__c/fields/id_api__c.field-meta.xml
<CustomField>
    <fullName>id_api__c</fullName>
    <label>ID API</label>
    <length>50</length>
    <type>Text</type>
</CustomField>