objects/Coin__c/fields/last_updated__c.field-meta.xml
<CustomField>
    <fullName>last_updated__c</fullName>
    <label>Atualizado em</label>
    <type>DateTime</type>
</CustomField>