objects/Coin__c/fields/Nome_da_Moeda__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Moeda__c</fullName>
    <label>Nome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>