objects/Coin__c/fields/Notas__c.field-meta.xml
<CustomField>
    <fullName>Notas__c</fullName>
    <label>Notas</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>