objects/Coin__c/fields/Preco_2__c.field-meta.xml
<CustomField>
    <fullName>Preco_2__c</fullName>
    <formula>Preco__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço²</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>