objects/Coin__c/fields/Preco__c.field-meta.xml
<CustomField>
    <fullName>Preco__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Preço</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>