objects/Coin__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total de moedas</label>
    <summarizedField>Wallet__c.qtd__c</summarizedField>
    <summaryForeignKey>Wallet__c.Moeda__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>