objects/Coin__c/fields/Valor_Total__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total__c</fullName>
    <formula>Preco__c *  Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>