objects/Coin__c/fields/Var_1Ano__c.field-meta.xml
<CustomField>
    <fullName>Var_1Ano__c</fullName>
    <label>% 1 Ano</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>