objects/Coin__c/fields/Var_24hs__c.field-meta.xml
<CustomField>
    <fullName>Var_24hs__c</fullName>
    <label>% 24hs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>