objects/Coin__c/fields/Var_30d__c.field-meta.xml
<CustomField>
    <fullName>Var_30d__c</fullName>
    <label>% 30d</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>