objects/Coin__c/fields/Var_7d__c.field-meta.xml
<CustomField>
    <fullName>Var_7d__c</fullName>
    <label>% 7d</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>