objects/Coin__c/fields/Var_Preco__c.field-meta.xml
<CustomField>
    <fullName>Var_Preco__c</fullName>
    <formula>&quot;24hs: &quot; &amp; TEXT(ROUND(Var_24hs__c,4)* 100 ) &amp; &quot;%&quot;
&amp; &quot; | 7d: &quot; &amp; TEXT( ROUND(Var_7d__c,4) * 100 )  &amp; &quot;%&quot;
&amp; &quot; | 30d: &quot; &amp; TEXT( ROUND(Var_30d__c,4) * 100 )  &amp; &quot;%&quot;
&amp; &quot; | 1ano: &quot; &amp; TEXT( ROUND(Var_1Ano__c,4) * 100 ) &amp; &quot;%&quot;</formula>
    <label>Variações de Preço</label>
    <type>Text</type>
</CustomField>