objects/Coin__c/validationRules/Impedir_alteracao_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Impedir_alteracao_Name</fullName>
    <active>false</active>
    <errorConditionFormula>PRIORVALUE(Name) != Name</errorConditionFormula>
    <errorMessage>Não é possível atualizar a sigla depois de criada. Favor inserir nova moeda.</errorMessage>
</ValidationRule>