objects/Coin__c/validationRules/Impedir_nomes_duplicados.validationRule-meta.xml
<ValidationRule>
    <fullName>Impedir_nomes_duplicados</fullName>
    <active>true</active>
    <errorConditionFormula>AND(VLOOKUP($ObjectType.Coin__c.Fields.Name, $ObjectType.Coin__c.Fields.Name, UPPER(Name)) = UPPER(Name), OR(ISNEW(), ISCHANGED(Name)))</errorConditionFormula>
    <errorMessage>Não é permitido inserir uma moeda já inserida anteriormente!</errorMessage>
</ValidationRule>